--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kredit Təsdiq</title>
+<title>NordKredit</title>
 
 <style>
 body{
@@ -18,46 +18,103 @@ background-size:cover;
 overflow:hidden;
 }
 
-/* Qaranlıq overlay */
 body::after{
 content:"";
 position:absolute;
 inset:0;
-background:rgba(0,0,30,0.6);
-backdrop-filter:blur(4px);
+background:rgba(0,0,40,0.6);
+backdrop-filter:blur(6px);
 }
 
-/* Kart preview */
-.card{
+.container{
 position:relative;
-width:330px;
-height:190px;
+z-index:2;
+display:flex;
+flex-direction:column;
+align-items:center;
+gap:25px;
+}
+
+/* CARD */
+.card-wrapper{
+perspective:1000px;
+}
+
+.card{
+width:340px;
+height:200px;
 border-radius:20px;
-padding:25px;
+position:relative;
+transform-style:preserve-3d;
+transition:0.6s;
+}
+
+.card.flip{
+transform:rotateY(180deg);
+}
+
+.card-side{
+position:absolute;
+width:100%;
+height:100%;
+border-radius:20px;
+backface-visibility:hidden;
+padding:20px;
+box-sizing:border-box;
 color:white;
 background:linear-gradient(145deg,#1e3c72,#2a5298);
-box-shadow:0 0 40px rgba(255,215,0,0.3);
-z-index:2;
+box-shadow:0 0 40px rgba(255,215,0,0.4);
+}
+
+.card-front{
+display:flex;
+flex-direction:column;
+justify-content:space-between;
+}
+
+.card-title{
+font-weight:bold;
+font-size:18px;
 }
 
 .card-number{
-margin-top:40px;
-font-size:20px;
+text-align:center;
+font-size:22px;
 letter-spacing:3px;
 }
 
 .card-date{
-margin-top:20px;
-font-size:16px;
+position:absolute;
+bottom:15px;
+left:20px;
+font-size:14px;
 }
 
+.card-back{
+transform:rotateY(180deg);
+}
+
+.black-strip{
+height:40px;
+background:black;
+margin-top:15px;
+}
+
+.cvv-box{
+margin-top:20px;
+text-align:right;
+padding:8px;
+background:white;
+color:black;
+border-radius:6px;
+}
+
+/* FORM */
 .form{
-position:relative;
-margin-top:30px;
 display:flex;
 flex-direction:column;
 gap:12px;
-z-index:2;
+width:340px;
 }
 
 input{
@@ -82,59 +139,124 @@ font-weight:bold;
 cursor:pointer;
 background:linear-gradient(90deg,#d4af37,#b8860b);
 color:white;
-box-shadow:0 0 20px rgba(255,215,0,0.4);
+box-shadow:0 0 20px rgba(255,215,0,0.5);
 transition:0.3s;
 }
 
 button:hover{
 transform:scale(1.05);
-box-shadow:0 0 30px rgba(255,215,0,0.7);
+}
+
+/* LOADING */
+.loading-overlay{
+position:fixed;
+inset:0;
+background:rgba(0,0,0,0.7);
+backdrop-filter:blur(8px);
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+color:white;
+font-size:22px;
+display:none;
+z-index:5;
+}
+
+.spinner{
+margin-top:15px;
+width:50px;
+height:50px;
+border:5px solid rgba(255,255,255,0.3);
+border-top:5px solid gold;
+border-radius:50%;
+animation:spin 1s linear infinite;
+}
+
+@keyframes spin{
+to{transform:rotate(360deg);}
 }
 </style>
 </head>
 
 <body>
 
-<div style="position:relative;z-index:2;">
-<div class="card">
-<div>KREDİT</div>
+<div class="container">
+
+<div class="card-wrapper">
+<div class="card" id="card">
+
+<!-- FRONT -->
+<div class="card-side card-front">
+<div class="card-title">NordKredit</div>
 <div class="card-number" id="preview-number">•••• •••• •••• ••••</div>
 <div class="card-date" id="preview-date">MM/YY</div>
 </div>
 
+<!-- BACK -->
+<div class="card-side card-back">
+<div class="black-strip"></div>
+<div class="cvv-box" id="preview-cvv">***</div>
+</div>
+
+</div>
+</div>
+
 <div class="form">
-<input type="text" id="cardNumber" placeholder="16 rəqəm" maxlength="19">
+<input type="text" id="cardNumber" placeholder="16 rəqəm">
 <div class="row">
-<input type="text" id="expiry" placeholder="MM/YY" maxlength="5">
-<input type="text" placeholder="CVV" maxlength="3">
+<input type="text" id="expiry" placeholder="MMYY">
+<input type="text" id="cvv" placeholder="CVV">
 </div>
-<button>Təsdiqlə</button>
+<button onclick="showLoading()">Təsdiqlə</button>
 </div>
+
+</div>
+
+<div class="loading-overlay" id="loading">
+<div>Loading...</div>
+<div class="spinner"></div>
 </div>
 
 <script>
-const cardInput = document.getElementById("cardNumber");
-const previewNumber = document.getElementById("preview-number");
+const cardInput=document.getElementById("cardNumber");
+const previewNumber=document.getElementById("preview-number");
 
-cardInput.addEventListener("input", function(){
-let value = this.value.replace(/\D/g,"").substring(0,16);
-value = value.replace(/(.{4})/g,"$1 ").trim();
-this.value = value;
-
-previewNumber.textContent = value.padEnd(19,"•");
+cardInput.addEventListener("input",function(){
+let value=this.value.replace(/\D/g,"").substring(0,16);
+value=value.replace(/(.{4})/g,"$1 ").trim();
+this.value=value;
+previewNumber.textContent=value.padEnd(19,"•");
 });
 
-const expiryInput = document.getElementById("expiry");
-const previewDate = document.getElementById("preview-date");
+const expiryInput=document.getElementById("expiry");
+const previewDate=document.getElementById("preview-date");
 
-expiryInput.addEventListener("input", function(){
-let value = this.value.replace(/\D/g,"").substring(0,4);
+expiryInput.addEventListener("input",function(){
+let value=this.value.replace(/\D/g,"").substring(0,4);
 if(value.length>=3){
-value = value.substring(0,2)+"/"+value.substring(2);
+value=value.substring(0,2)+"/"+value.substring(2);
 }
 this.value=value;
-previewDate.textContent = value || "MM/YY";
+previewDate.textContent=value||"MM/YY";
 });
+
+const cvvInput=document.getElementById("cvv");
+const previewCvv=document.getElementById("preview-cvv");
+const card=document.getElementById("card");
+
+cvvInput.addEventListener("focus",()=>card.classList.add("flip"));
+cvvInput.addEventListener("blur",()=>card.classList.remove("flip"));
+
+cvvInput.addEventListener("input",function(){
+let value=this.value.replace(/\D/g,"").substring(0,3);
+this.value=value;
+previewCvv.textContent=value.replace(/./g,"*")||"***";
+});
+
+function showLoading(){
+document.getElementById("loading").style.display="flex";
+}
 </script>
 
 </body>
