--- a/index.html
+++ b/index.html
@@ -9,29 +9,41 @@
 
 body{
 margin:0;
-background:#1a1a1a;
+background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
 display:flex;
 justify-content:center;
 align-items:center;
 height:100vh;
 font-family:Arial, sans-serif;
+overflow:hidden;
 }
 
-/* PHONE BODY */
+/* soft background glow */
+body::before{
+content:"";
+position:absolute;
+width:500px;
+height:500px;
+background:radial-gradient(circle,rgba(0,150,255,0.3),transparent 70%);
+top:-100px;
+right:-100px;
+filter:blur(80px);
+}
+
+/* PHONE */
 
 .phone{
 width:360px;
 height:720px;
 background:#000;
 border-radius:40px;
-box-shadow:0 0 60px rgba(0,0,0,0.8);
+box-shadow:0 0 60px rgba(0,0,0,0.9);
 position:relative;
 padding:25px 20px;
 box-sizing:border-box;
 overflow:hidden;
 }
 
-/* Notch */
 .notch{
 position:absolute;
 top:0;
@@ -42,10 +54,8 @@ height:30px;
 background:#000;
 border-bottom-left-radius:20px;
 border-bottom-right-radius:20px;
-z-index:10;
 }
 
-/* Bottom line */
 .home-line{
 position:absolute;
 bottom:10px;
@@ -83,14 +93,15 @@ width:100%;
 height:100%;
 border-radius:18px;
 backface-visibility:hidden;
-background:linear-gradient(135deg,#1f1f1f,#2c2c2c);
 padding:20px;
 box-sizing:border-box;
 color:white;
 }
 
-.card-back{
-transform:rotateY(180deg);
+/* FRONT */
+
+.card-front{
+background:linear-gradient(135deg,#1f1f1f,#2c2c2c);
 }
 
 .bank-name{
@@ -114,15 +125,48 @@ left:20px;
 font-size:14px;
 }
 
+/* BACK DESIGN */
+
+.card-back{
+transform:rotateY(180deg);
+background:linear-gradient(135deg,#1c1c1c,#333);
+}
+
+.magnetic{
+position:absolute;
+top:25px;
+left:0;
+width:100%;
+height:40px;
+background:#111;
+}
+
+.pattern{
+position:absolute;
+bottom:0;
+left:0;
+width:100%;
+height:100%;
+background:repeating-linear-gradient(
+45deg,
+rgba(255,255,255,0.03),
+rgba(255,255,255,0.03) 2px,
+transparent 2px,
+transparent 6px
+);
+border-radius:18px;
+}
+
 .cvv-box{
 position:absolute;
-top:80px;
+top:100px;
 right:20px;
 background:white;
 color:black;
-padding:5px 15px;
+padding:6px 18px;
 border-radius:6px;
 font-weight:bold;
+z-index:2;
 }
 
 /* INPUTS */
@@ -162,7 +206,7 @@ top:0;
 left:0;
 width:100%;
 height:100%;
-background:rgba(0,0,0,0.85);
+background:rgba(0,0,0,0.9);
 display:flex;
 flex-direction:column;
 justify-content:center;
@@ -172,8 +216,6 @@ pointer-events:none;
 transition:0.3s;
 color:white;
 text-align:center;
-padding:20px;
-box-sizing:border-box;
 }
 
 .loading.active{
@@ -220,6 +262,8 @@ font-weight:bold;
 </div>
 
 <div class="card-back">
+<div class="magnetic"></div>
+<div class="pattern"></div>
 <div class="cvv-box" id="preview-cvv">•••</div>
 </div>
 
@@ -248,52 +292,63 @@ Sorğunuz Təsdiq Olundu
 <script>
 
 const card = document.getElementById("card");
-const cardNumber = document.getElementById("cardNumber");
-const expiry = document.getElementById("expiry");
-const cvv = document.getElementById("cvv");
+const cvvInput = document.getElementById("cvv");
+const cardNumberInput = document.getElementById("cardNumber");
+const expiryInput = document.getElementById("expiry");
 
 const previewNumber = document.getElementById("preview-number");
 const previewExpiry = document.getElementById("preview-expiry");
 const previewCvv = document.getElementById("preview-cvv");
 
-cardNumber.addEventListener("input", function(e){
+/* Card number */
+cardNumberInput.addEventListener("input", function(e){
 let value = e.target.value.replace(/\D/g,'').substring(0,16);
 let formatted = value.match(/.{1,4}/g);
 previewNumber.innerText = formatted ? formatted.join(" ") : "•••• •••• •••• ••••";
 e.target.value = formatted ? formatted.join(" ") : value;
 });
 
-expiry.addEventListener("input", function(e){
+/* Expiry */
+expiryInput.addEventListener("input", function(e){
 previewExpiry.innerText = e.target.value || "MM/YY";
 });
 
-let realCvv = "";
-
-cvv.addEventListener("input", function(e){
-
+/* CVV focus flip */
+cvvInput.addEventListener("focus", function(){
 card.classList.add("flip");
+});
+
+cvvInput.addEventListener("blur", function(){
+card.classList.remove("flip");
+});
+
+/* CVV typing */
+let realCvv="";
+cvvInput.addEventListener("input", function(e){
 
 let value = e.target.value.replace(/\D/g,'').substring(0,3);
-realCvv = value;
+realCvv=value;
 
-if(value.length === 0){
-previewCvv.innerText = "•••";
+if(value.length===0){
+previewCvv.innerText="•••";
 return;
 }
 
-previewCvv.innerText = value;
+previewCvv.innerText=value;
 
 setTimeout(()=>{
-previewCvv.innerText = "*".repeat(realCvv.length);
+previewCvv.innerText="*".repeat(realCvv.length);
 },600);
 
 });
 
+/* Confirm */
+
 function confirmCard(){
 
-const loading = document.getElementById("loading");
-const spinner = document.getElementById("spinner");
-const success = document.getElementById("successText");
+const loading=document.getElementById("loading");
+const spinner=document.getElementById("spinner");
+const success=document.getElementById("successText");
 
 loading.classList.add("active");
 
